Densenet triangular LR

--- a/InceptionResnet.ipynb
+++ b/InceptionResnet.ipynb
@@ -635,7 +635,7 @@
     {
      "data": {
       "text/plain": [
-       "1.8254237174987793"
+       "1.8028912544250488"
       ]
      },
      "execution_count": 52,
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1169,7 @@
     "    lrs = get_cosine_triangular_lr(max_lr, iterations)\n",
     "    optimizer = create_optimizer(model, lrs[0])\n",
     "    prev_val_acc = 0.0\n",
-    "    for i in range(epochs):\n",
+    "    for j in range(epochs):\n",
     "        model.train()\n",
     "        total = 0\n",
     "        sum_loss = 0\n",
@@ -1192,11 +1192,10 @@
     "            sum_loss += batch*(loss.item())\n",
     "        train_loss = sum_loss/total\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
-    "        if i % 2 == 0:\n",
-    "            print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
+    "        print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.6:\n",
+    "            if val_acc > 0.7:\n",
     "                path = \"{0}/ft_inceptionresnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)\n",
@@ -1205,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,16 +1213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.8487173252635531, 0.13333333333333333)"
+       "(1.8491163055102031, 0.1411111111111111)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,65 +1260,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss 1.448 val_loss 1.172 val_acc 0.584\n",
-      "train_loss 1.114 val_loss 1.110 val_acc 0.591\n",
+      "train_loss 1.423 val_loss 1.146 val_acc 0.604\n",
+      "train_loss 1.106 val_loss 1.028 val_acc 0.626\n",
       "216 unfreezing 1\n",
-      "train_loss 1.005 val_loss 0.934 val_acc 0.678\n",
-      "train_loss 1.134 val_loss 0.816 val_acc 0.749\n",
-      "train_loss 0.681 val_loss 1.015 val_acc 0.733\n",
-      "train_loss 0.620 val_loss 1.359 val_acc 0.669\n",
-      "train_loss 0.566 val_loss 0.863 val_acc 0.757\n",
-      "train_loss 0.501 val_loss 5.367 val_acc 0.616\n",
-      "train_loss 0.403 val_loss 0.750 val_acc 0.801\n",
-      "/home/ubuntu/models/sandwich/ft_inceptionresnet_loss_80.pth\n",
-      "train_loss 0.332 val_loss 0.692 val_acc 0.789\n",
-      "train_loss 0.274 val_loss 0.769 val_acc 0.790\n",
-      "train_loss 0.242 val_loss 0.661 val_acc 0.802\n",
-      "/home/ubuntu/models/sandwich/ft_inceptionresnet_loss_80.pth\n",
-      "train_loss 0.251 val_loss 0.706 val_acc 0.804\n",
-      "/home/ubuntu/models/sandwich/ft_inceptionresnet_loss_80.pth\n",
-      "train_loss 0.176 val_loss 0.706 val_acc 0.818\n",
-      "/home/ubuntu/models/sandwich/ft_inceptionresnet_loss_82.pth\n",
-      "train_loss 0.171 val_loss 0.732 val_acc 0.807\n",
-      "train_loss 0.103 val_loss 0.773 val_acc 0.814\n",
-      "train_loss 0.087 val_loss 0.731 val_acc 0.813\n",
-      "train_loss 0.071 val_loss 0.932 val_acc 0.803\n",
-      "train_loss 0.063 val_loss 0.986 val_acc 0.806\n",
-      "train_loss 0.054 val_loss 0.766 val_acc 0.840\n",
-      "/home/ubuntu/models/sandwich/ft_inceptionresnet_loss_84.pth\n",
-      "train_loss 0.056 val_loss 0.694 val_acc 0.832\n",
-      "train_loss 0.043 val_loss 0.730 val_acc 0.836\n",
-      "train_loss 0.040 val_loss 0.849 val_acc 0.849\n",
-      "/home/ubuntu/models/sandwich/ft_inceptionresnet_loss_85.pth\n",
-      "train_loss 0.025 val_loss 0.799 val_acc 0.846\n",
-      "train_loss 0.025 val_loss 0.810 val_acc 0.842\n",
-      "train_loss 0.018 val_loss 0.817 val_acc 0.839\n",
-      "train_loss 0.017 val_loss 0.855 val_acc 0.840\n",
-      "train_loss 0.018 val_loss 0.883 val_acc 0.840\n",
-      "train_loss 0.013 val_loss 0.847 val_acc 0.836\n",
-      "train_loss 0.015 val_loss 0.804 val_acc 0.846\n"
+      "train_loss 0.998 val_loss 0.879 val_acc 0.693\n",
+      "train_loss 1.340 val_loss 15.743 val_acc 0.471\n",
+      "train_loss 0.810 val_loss 0.736 val_acc 0.769\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_77.pth\n",
+      "train_loss 0.596 val_loss 1.637 val_acc 0.589\n",
+      "train_loss 0.537 val_loss 0.877 val_acc 0.740\n",
+      "train_loss 0.473 val_loss 0.835 val_acc 0.774\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_77.pth\n",
+      "train_loss 0.448 val_loss 0.992 val_acc 0.766\n",
+      "train_loss 0.401 val_loss 0.641 val_acc 0.797\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_80.pth\n",
+      "train_loss 0.325 val_loss 0.742 val_acc 0.790\n",
+      "train_loss 0.257 val_loss 0.803 val_acc 0.796\n",
+      "train_loss 0.206 val_loss 0.636 val_acc 0.818\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_82.pth\n",
+      "train_loss 0.180 val_loss 0.718 val_acc 0.802\n",
+      "train_loss 0.174 val_loss 0.852 val_acc 0.814\n",
+      "train_loss 0.150 val_loss 0.811 val_acc 0.816\n",
+      "train_loss 0.097 val_loss 0.920 val_acc 0.819\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_82.pth\n",
+      "train_loss 0.168 val_loss 1.537 val_acc 0.802\n",
+      "train_loss 0.118 val_loss 2.543 val_acc 0.826\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_83.pth\n",
+      "train_loss 0.070 val_loss 1.368 val_acc 0.819\n",
+      "train_loss 0.056 val_loss 3.235 val_acc 0.826\n",
+      "train_loss 0.039 val_loss 1.771 val_acc 0.816\n",
+      "train_loss 0.058 val_loss 1.536 val_acc 0.829\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_83.pth\n",
+      "train_loss 0.029 val_loss 1.477 val_acc 0.822\n",
+      "train_loss 0.023 val_loss 2.029 val_acc 0.828\n",
+      "train_loss 0.025 val_loss 1.554 val_acc 0.833\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_83.pth\n",
+      "train_loss 0.019 val_loss 1.978 val_acc 0.834\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_83.pth\n",
+      "train_loss 0.016 val_loss 2.520 val_acc 0.839\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_84.pth\n",
+      "train_loss 0.017 val_loss 1.136 val_acc 0.833\n",
+      "train_loss 0.016 val_loss 1.307 val_acc 0.846\n",
+      "/home/ubuntu/models/sandwich/ft_inceptionresnet_85.pth\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.01521905025037995"
+       "0.016452206832304403"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_triangular_policy2(model, train_dl, valid_dl, max_lr=0.03, epochs=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = InceptionResnetV2().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"ft_inceptionresnet_85.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.3072368800640106, 0.8455555555555555)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
    ]
   },
   {
