--- a/Resnet.ipynb
+++ b/Resnet.ipynb
@@ -628,7 +628,7 @@
     {
      "data": {
       "text/plain": [
-       "1.840501070022583"
+       "1.9147741794586182"
       ]
      },
      "execution_count": 52,
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1169,7 @@
     "    lrs = get_cosine_triangular_lr(max_lr, iterations)\n",
     "    optimizer = create_optimizer(model, lrs[0])\n",
     "    prev_val_acc = 0.0\n",
-    "    for i in range(epochs):\n",
+    "    for j in range(epochs):\n",
     "        model.train()\n",
     "        total = 0\n",
     "        sum_loss = 0\n",
@@ -1195,11 +1195,10 @@
     "            sum_loss += batch*(loss.item())\n",
     "        train_loss = sum_loss/total\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
-    "        if i % 2 == 0:\n",
-    "            print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
+    "        print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.6:\n",
+    "            if val_acc > 0.76:\n",
     "                path = \"{0}/ft_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)\n",
@@ -1329,17 +1328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_triangular_policy2(model, train_dl, valid_dl, max_lr=0.06, epochs=10):\n",
+    "def train_triangular_policy2(model, train_dl, valid_dl, max_lr=0.05, epochs=10):\n",
     "    idx = 0\n",
     "    iterations = epochs*len(train_dl)\n",
     "    lrs = get_cosine_triangular_lr(max_lr, iterations)\n",
     "    optimizer = create_optimizer(model, lrs[0])\n",
     "    prev_val_acc = 0.0\n",
-    "    for i in range(epochs):\n",
+    "    for j in range(epochs):\n",
     "        model.train()\n",
     "        total = 0\n",
     "        sum_loss = 0\n",
@@ -1362,11 +1361,10 @@
     "            sum_loss += batch*(loss.item())\n",
     "        train_loss = sum_loss/total\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
-    "        if i % 2 == 0:\n",
-    "            print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
+    "        print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.6:\n",
+    "            if val_acc > 0.76:\n",
     "                path = \"{0}/ft_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)\n",
@@ -1375,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,16 +1382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.9448052909639146, 0.14555555555555555)"
+       "(1.8766641020774841, 0.15555555555555556)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,64 +1402,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss 1.337 val_loss 1.000 val_acc 0.636\n",
-      "train_loss 0.929 val_loss 0.852 val_acc 0.698\n",
+      "train_loss 1.344 val_loss 0.967 val_acc 0.698\n",
+      "train_loss 0.913 val_loss 0.913 val_acc 0.680\n",
       "216 unfreezing 1\n",
-      "train_loss 1.041 val_loss 1.015 val_acc 0.686\n",
-      "train_loss 2.133 val_loss 1.690 val_acc 0.362\n",
-      "train_loss 1.505 val_loss 232.954 val_acc 0.150\n",
-      "train_loss 1.311 val_loss 1.286 val_acc 0.534\n",
-      "train_loss 1.018 val_loss 1.309 val_acc 0.554\n",
-      "train_loss 0.890 val_loss 1.083 val_acc 0.643\n",
-      "train_loss 0.809 val_loss 1.038 val_acc 0.616\n",
-      "train_loss 0.736 val_loss 0.851 val_acc 0.729\n",
-      "train_loss 0.681 val_loss 1.183 val_acc 0.636\n",
-      "train_loss 0.601 val_loss 0.826 val_acc 0.743\n",
-      "train_loss 0.551 val_loss 0.860 val_acc 0.729\n",
-      "train_loss 0.507 val_loss 0.995 val_acc 0.693\n",
-      "train_loss 0.488 val_loss 1.024 val_acc 0.681\n",
-      "train_loss 0.416 val_loss 0.894 val_acc 0.749\n",
-      "train_loss 0.426 val_loss 0.809 val_acc 0.727\n",
-      "train_loss 0.359 val_loss 0.787 val_acc 0.763\n",
-      "train_loss 0.329 val_loss 0.729 val_acc 0.780\n",
-      "train_loss 0.283 val_loss 0.928 val_acc 0.767\n",
-      "train_loss 0.247 val_loss 0.838 val_acc 0.791\n",
-      "train_loss 0.223 val_loss 0.857 val_acc 0.771\n",
-      "train_loss 0.183 val_loss 0.630 val_acc 0.819\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_loss_82.pth\n",
-      "train_loss 0.136 val_loss 0.729 val_acc 0.811\n",
-      "train_loss 0.112 val_loss 0.625 val_acc 0.839\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_loss_84.pth\n",
-      "train_loss 0.092 val_loss 0.657 val_acc 0.840\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_loss_84.pth\n",
-      "train_loss 0.078 val_loss 0.678 val_acc 0.842\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_loss_84.pth\n",
-      "train_loss 0.066 val_loss 0.677 val_acc 0.836\n",
-      "train_loss 0.062 val_loss 0.663 val_acc 0.842\n",
-      "train_loss 0.061 val_loss 0.664 val_acc 0.848\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_loss_85.pth\n"
+      "train_loss 0.969 val_loss 1.380 val_acc 0.604\n",
+      "train_loss 2.290 val_loss 2.121 val_acc 0.316\n",
+      "train_loss 1.622 val_loss 2.385 val_acc 0.350\n",
+      "train_loss 1.185 val_loss 1.841 val_acc 0.489\n",
+      "train_loss 1.079 val_loss 3.672 val_acc 0.346\n",
+      "train_loss 0.882 val_loss 1.046 val_acc 0.657\n",
+      "train_loss 0.825 val_loss 4.869 val_acc 0.554\n",
+      "train_loss 0.746 val_loss 1.138 val_acc 0.647\n",
+      "train_loss 0.658 val_loss 1.091 val_acc 0.654\n",
+      "train_loss 0.608 val_loss 1.090 val_acc 0.656\n",
+      "train_loss 0.575 val_loss 1.583 val_acc 0.600\n",
+      "train_loss 0.538 val_loss 1.111 val_acc 0.696\n",
+      "train_loss 0.479 val_loss 1.111 val_acc 0.682\n",
+      "train_loss 0.432 val_loss 1.104 val_acc 0.679\n",
+      "train_loss 0.393 val_loss 0.765 val_acc 0.742\n",
+      "train_loss 0.350 val_loss 0.774 val_acc 0.782\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_78.pth\n",
+      "train_loss 0.327 val_loss 0.770 val_acc 0.773\n",
+      "train_loss 0.254 val_loss 0.686 val_acc 0.823\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_82.pth\n",
+      "train_loss 0.218 val_loss 1.333 val_acc 0.698\n",
+      "train_loss 0.201 val_loss 0.699 val_acc 0.813\n",
+      "train_loss 0.152 val_loss 0.855 val_acc 0.761\n",
+      "train_loss 0.131 val_loss 0.606 val_acc 0.838\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_84.pth\n",
+      "train_loss 0.098 val_loss 0.590 val_acc 0.839\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_84.pth\n",
+      "train_loss 0.086 val_loss 0.590 val_acc 0.851\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_85.pth\n",
+      "train_loss 0.063 val_loss 0.596 val_acc 0.840\n",
+      "train_loss 0.052 val_loss 0.609 val_acc 0.843\n",
+      "train_loss 0.047 val_loss 0.605 val_acc 0.846\n",
+      "train_loss 0.049 val_loss 0.600 val_acc 0.846\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0612638705319518"
+       "0.04911902785210663"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_triangular_policy2(model, train_dl, valid_dl, max_lr=0.06, epochs=30)"
+    "train_triangular_policy2(model, train_dl, valid_dl, max_lr=0.05, epochs=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ResnetV2().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"ft_resnet_85.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5904438164499071, 0.8511111111111112)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
    ]
   },
   {
