Train Resnet on processed images

--- a/Densenet.ipynb
+++ b/Densenet.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Densenet121"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -629,7 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train model with fixed learning rate"
+    "# Train model with fixed learning rate for 10 epochs"
    ]
   },
   {
@@ -832,7 +839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train with 1-cycle triangular learning rate"
+    "# Train linear layer with 1-cycle triangular learning rate for 30 epochs"
    ]
   },
   {
