--- a/Inception.ipynb
+++ b/Inception.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# InceptionV3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -662,7 +669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train model with fixed learning rate"
+    "# Train model with fixed learning rate for 10 epochs"
    ]
   },
   {
@@ -786,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unfreeze top 2 hidden layers, train with lower learning rate"
+    "# Unfreeze top 2 hidden layers, train with lower learning rate for additional 20 epochs"
    ]
   },
   {
@@ -972,7 +979,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unfreeze top 4 hidden layers, train with lower learning rate"
+    "# Unfreeze top 4 hidden layers, train with lower learning rate for additional 20 epochs"
    ]
   },
   {
