--- a/InceptionResnet.ipynb
+++ b/InceptionResnet.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# InceptionResnetV2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -693,7 +700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train model with fixed learning rate"
+    "# Train model with fixed learning rate for 10 epochs"
    ]
   },
   {
@@ -817,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unfreeze top 4 hidden layers, train with lower learning rate¶"
+    "# Unfreeze top 4 hidden layers, train with lower learning rate for additional 20 epochs"
    ]
   },
   {
@@ -1155,6 +1162,13 @@
     "        parameters = filter(lambda x: hasattr(x,'requires_grad'), group.parameters())\n",
     "        for p in parameters: \n",
     "            p.requires_grad = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1-cycle rate training, unfreeze top hidden layers, train for 30 epochs"
    ]
   },
   {
