Final test set prediction

--- a/Resnet.ipynb
+++ b/Resnet.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=PATH/\"train-315\""
+    "path = PATH/\"train-315\""
    ]
   },
   {
@@ -245,7 +245,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -312,11 +312,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_ds.label2ind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "valid_ds = SandwichDataset(files=valid_files, labels=labels, transforms=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# valid_ds.label2ind"
    ]
   },
   {
