GW and HE as data augmentation

--- a/Resnet_HE.ipynb
+++ b/Resnet_HE.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resnet34 on Histogram Equalization images"
+    "# Resnet34 on images preprocessed with Histogram Equalization"
    ]
   },
   {
