--- a/final_test_prediction.ipynb
+++ b/final_test_prediction.ipynb
@@ -556,6 +556,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Just for fun: apply the model to photos that I took"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
