--- a/Resnet_GW.ipynb
+++ b/Resnet_GW.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resnet34 on Grey World images"
+    "# Resnet34 on images preprocessed with Grey World"
    ]
   },
   {
