Make predicition for actual photos

--- a/Resnet_GWHE_Augmentation.ipynb
+++ b/Resnet_GWHE_Augmentation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resnet34 with Grey World and Histogram Equalization as random data augmentations"
+    "# Resnet34 with Grey World+Histogram Equalization as a random data augmentation"
    ]
   },
   {
@@ -307,15 +307,16 @@
     "        name = path.parts[-1]\n",
     "        y_class = self.label2ind[path.parts[-2]] \n",
     "        x = cv2.imread(str(path)).astype(np.float32)\n",
-    "        # Randomly apply Grey World and Histogram Equalization to image\n",
-    "        if np.random.random() > 0.5: x = gwhe_img(x).copy()\n",
-    "        x = cv2.cvtColor(x, cv2.COLOR_BGR2RGB)/255\n",
     "        if self.transforms:\n",
+    "            # Randomly apply Grey World and Histogram Equalization to image\n",
+    "            if np.random.random() > 0.5: x = gwhe_img(x).copy()\n",
+    "            x = cv2.cvtColor(x, cv2.COLOR_BGR2RGB)/255\n",
     "            rdeg = (np.random.random()-.50)*20\n",
     "            x = rotate_cv(x, rdeg)\n",
     "            if np.random.random() > 0.5: x = np.fliplr(x).copy()\n",
     "            x = random_crop(x)\n",
     "        else:\n",
+    "            x = cv2.cvtColor(x, cv2.COLOR_BGR2RGB)/255\n",
     "            x = center_crop(x)\n",
     "        x = normalize(x)\n",
     "        y = self.label2ind[path.parts[-2]]\n",
@@ -674,7 +675,7 @@
     {
      "data": {
       "text/plain": [
-       "2.303318977355957"
+       "2.0690958499908447"
       ]
      },
      "execution_count": 55,
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,22 +818,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.629 val loss 1.001 val accuracy 0.633\n",
-      "/home/ubuntu/models/sandwich/initial_aug_resnet_63.pth\n",
+      "train loss 1.554 val loss 0.914 val accuracy 0.670\n",
+      "/home/ubuntu/models/sandwich/initial_aug_resnet_67.pth\n",
+      "/home/ubuntu/models/sandwich/initial_aug_resnet_69.pth\n",
+      "train loss 0.942 val loss 0.853 val accuracy 0.698\n",
+      "/home/ubuntu/models/sandwich/initial_aug_resnet_70.pth\n",
+      "train loss 0.887 val loss 1.004 val accuracy 0.649\n",
       "/home/ubuntu/models/sandwich/initial_aug_resnet_73.pth\n",
-      "train loss 0.813 val loss 0.864 val accuracy 0.708\n",
-      "train loss 0.817 val loss 0.950 val accuracy 0.676\n",
-      "train loss 0.823 val loss 0.830 val accuracy 0.730\n",
-      "train loss 0.899 val loss 0.905 val accuracy 0.710\n"
+      "train loss 0.814 val loss 0.720 val accuracy 0.754\n",
+      "/home/ubuntu/models/sandwich/initial_aug_resnet_75.pth\n",
+      "train loss 0.808 val loss 0.847 val accuracy 0.739\n"
      ]
     }
    ],
@@ -842,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,16 +871,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"initial_aug_resnet_73.pth\")"
+    "load_model(model, model_path/\"initial_aug_resnet_75.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
@@ -884,10 +888,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.7918503781159719, 0.7322222222222222)"
+       "(0.7203980055120256, 0.7544444444444445)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +960,7 @@
     "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.73:\n",
+    "            if val_acc > 0.75:\n",
     "                path = \"{0}/unfreeze_aug_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)"
@@ -966,14 +970,38 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 1.147 val loss 0.806 val accuracy 0.738\n",
+      "train loss 0.583 val loss 0.887 val accuracy 0.706\n",
+      "/home/ubuntu/models/sandwich/unfreeze_aug_resnet_76.pth\n",
+      "train loss 0.426 val loss 0.750 val accuracy 0.763\n",
+      "/home/ubuntu/models/sandwich/unfreeze_aug_resnet_77.pth\n",
+      "train loss 0.333 val loss 0.777 val accuracy 0.773\n",
+      "/home/ubuntu/models/sandwich/unfreeze_aug_resnet_79.pth\n",
+      "train loss 0.240 val loss 1.349 val accuracy 0.688\n",
+      "train loss 0.213 val loss 0.700 val accuracy 0.801\n",
+      "/home/ubuntu/models/sandwich/unfreeze_aug_resnet_80.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_aug_resnet_82.pth\n",
+      "train loss 0.173 val loss 0.758 val accuracy 0.790\n",
+      "train loss 0.146 val loss 0.823 val accuracy 0.799\n",
+      "/home/ubuntu/models/sandwich/unfreeze_aug_resnet_83.pth\n",
+      "train loss 0.102 val loss 0.874 val accuracy 0.809\n",
+      "train loss 0.149 val loss 0.834 val accuracy 0.799\n",
+      "/home/ubuntu/models/sandwich/unfreeze_aug_resnet_84.pth\n"
+     ]
+    }
+   ],
    "source": [
     "train2(model, epochs=20, learning_rate=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,25 +1010,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"/home/ubuntu/models/sandwich/unfreeze_resnet_83.pth\")"
+    "load_model(model, model_path/\"/home/ubuntu/models/sandwich/unfreeze_aug_resnet_84.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7538267936971452, 0.8322222222222222)"
+       "(0.609929227994548, 0.8377777777777777)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1247,7 @@
     "        print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.76:\n",
+    "            if val_acc > 0.73:\n",
     "                path = \"{0}/ft_aug_resnet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)\n",
@@ -1228,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,16 +1265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.8766641020774841, 0.15555555555555556)"
+       "(1.9267942772971258, 0.14333333333333334)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,58 +1285,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss 1.344 val_loss 0.967 val_acc 0.698\n",
-      "train_loss 0.913 val_loss 0.913 val_acc 0.680\n",
+      "train_loss 1.381 val_loss 0.952 val_acc 0.688\n",
+      "train_loss 0.961 val_loss 0.945 val_acc 0.629\n",
       "216 unfreezing 1\n",
-      "train_loss 0.969 val_loss 1.380 val_acc 0.604\n",
-      "train_loss 2.290 val_loss 2.121 val_acc 0.316\n",
-      "train_loss 1.622 val_loss 2.385 val_acc 0.350\n",
-      "train_loss 1.185 val_loss 1.841 val_acc 0.489\n",
-      "train_loss 1.079 val_loss 3.672 val_acc 0.346\n",
-      "train_loss 0.882 val_loss 1.046 val_acc 0.657\n",
-      "train_loss 0.825 val_loss 4.869 val_acc 0.554\n",
-      "train_loss 0.746 val_loss 1.138 val_acc 0.647\n",
-      "train_loss 0.658 val_loss 1.091 val_acc 0.654\n",
-      "train_loss 0.608 val_loss 1.090 val_acc 0.656\n",
-      "train_loss 0.575 val_loss 1.583 val_acc 0.600\n",
-      "train_loss 0.538 val_loss 1.111 val_acc 0.696\n",
-      "train_loss 0.479 val_loss 1.111 val_acc 0.682\n",
-      "train_loss 0.432 val_loss 1.104 val_acc 0.679\n",
-      "train_loss 0.393 val_loss 0.765 val_acc 0.742\n",
-      "train_loss 0.350 val_loss 0.774 val_acc 0.782\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_78.pth\n",
-      "train_loss 0.327 val_loss 0.770 val_acc 0.773\n",
-      "train_loss 0.254 val_loss 0.686 val_acc 0.823\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_82.pth\n",
-      "train_loss 0.218 val_loss 1.333 val_acc 0.698\n",
-      "train_loss 0.201 val_loss 0.699 val_acc 0.813\n",
-      "train_loss 0.152 val_loss 0.855 val_acc 0.761\n",
-      "train_loss 0.131 val_loss 0.606 val_acc 0.838\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_84.pth\n",
-      "train_loss 0.098 val_loss 0.590 val_acc 0.839\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_84.pth\n",
-      "train_loss 0.086 val_loss 0.590 val_acc 0.851\n",
-      "/home/ubuntu/models/sandwich/ft_resnet_85.pth\n",
-      "train_loss 0.063 val_loss 0.596 val_acc 0.840\n",
-      "train_loss 0.052 val_loss 0.609 val_acc 0.843\n",
-      "train_loss 0.047 val_loss 0.605 val_acc 0.846\n",
-      "train_loss 0.049 val_loss 0.600 val_acc 0.846\n"
+      "train_loss 0.981 val_loss 0.865 val_acc 0.689\n",
+      "train_loss 2.271 val_loss 2.265 val_acc 0.287\n",
+      "train_loss 1.390 val_loss 1.379 val_acc 0.510\n",
+      "train_loss 1.419 val_loss 19.780 val_acc 0.309\n",
+      "train_loss 1.239 val_loss 1.508 val_acc 0.492\n",
+      "train_loss 0.990 val_loss 1.410 val_acc 0.534\n",
+      "train_loss 0.911 val_loss 0.986 val_acc 0.709\n",
+      "train_loss 0.843 val_loss 1.233 val_acc 0.563\n",
+      "train_loss 0.789 val_loss 0.734 val_acc 0.744\n",
+      "/home/ubuntu/models/sandwich/ft_aug_resnet_74.pth\n",
+      "train_loss 0.735 val_loss 0.984 val_acc 0.674\n",
+      "train_loss 0.661 val_loss 1.081 val_acc 0.674\n",
+      "train_loss 0.612 val_loss 0.810 val_acc 0.728\n",
+      "train_loss 0.585 val_loss 0.690 val_acc 0.789\n",
+      "/home/ubuntu/models/sandwich/ft_aug_resnet_79.pth\n",
+      "train_loss 0.567 val_loss 0.890 val_acc 0.718\n",
+      "train_loss 0.565 val_loss 0.944 val_acc 0.713\n",
+      "train_loss 0.466 val_loss 0.848 val_acc 0.761\n",
+      "train_loss 0.455 val_loss 0.686 val_acc 0.779\n",
+      "train_loss 0.391 val_loss 0.866 val_acc 0.768\n",
+      "train_loss 0.376 val_loss 0.706 val_acc 0.798\n",
+      "/home/ubuntu/models/sandwich/ft_aug_resnet_80.pth\n",
+      "train_loss 0.298 val_loss 0.632 val_acc 0.818\n",
+      "/home/ubuntu/models/sandwich/ft_aug_resnet_82.pth\n",
+      "train_loss 0.279 val_loss 0.735 val_acc 0.793\n",
+      "train_loss 0.242 val_loss 0.705 val_acc 0.811\n",
+      "train_loss 0.201 val_loss 0.658 val_acc 0.830\n",
+      "/home/ubuntu/models/sandwich/ft_aug_resnet_83.pth\n",
+      "train_loss 0.177 val_loss 0.588 val_acc 0.830\n",
+      "train_loss 0.156 val_loss 0.641 val_acc 0.823\n",
+      "train_loss 0.132 val_loss 0.647 val_acc 0.836\n",
+      "/home/ubuntu/models/sandwich/ft_aug_resnet_84.pth\n",
+      "train_loss 0.122 val_loss 0.657 val_acc 0.836\n",
+      "train_loss 0.121 val_loss 0.663 val_acc 0.836\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.04911902785210663"
+       "0.12141090502134627"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,25 +1357,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"ft_resnet_85.pth\")"
+    "load_model(model, model_path/\"ft_aug_resnet_84.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.5904438164499071, 0.8511111111111112)"
+       "(0.6474739015102386, 0.8355555555555556)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
