--- a/image_preprocess.ipynb
+++ b/image_preprocess.ipynb
@@ -45,8 +45,6 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "from PIL import Image\n",
-    "from colorcorrect.util import from_pil, to_pil\n",
     "import colorcorrect.algorithm as cca\n",
     "\n",
     "import matplotlib.pyplot as plt"
@@ -120,9 +118,10 @@
    "outputs": [],
    "source": [
     "def grey_world_image(img_path):\n",
-    "    img = Image.open(img_path)\n",
-    "    gw_img = to_pil(cca.grey_world(from_pil(img)))\n",
-    "    return gw_img"
+    "    img = cv2.imread(str(img_path))\n",
+    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "    gw_img = cca.grey_world(img)\n",
+    "    return cv2.cvtColor(gw_img, cv2.COLOR_RGB2BGR)"
    ]
   },
   {
@@ -140,7 +139,7 @@
     "        for f in files:\n",
     "            f_name = f.parts[-1]\n",
     "            gw_img = grey_world_image(f)\n",
-    "            gw_img.save(str(new_path/label/f_name))"
+    "            cv2.imwrite(str(new_path/label/f_name), gw_img)"
    ]
   },
   {
@@ -441,7 +440,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc401409400>"
+       "<matplotlib.image.AxesImage at 0x7f7179f7e278>"
       ]
      },
      "execution_count": 37,
@@ -482,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc4013a6dd8>"
+       "<matplotlib.image.AxesImage at 0x7f7179f1cc88>"
       ]
      },
      "execution_count": 39,
