Fine-tune DenseNet

--- a/final_test_prediction.ipynb
+++ b/final_test_prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final model prediction on test set"
+    "# Final, best model prediction on test set"
    ]
   },
   {
@@ -635,7 +635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Just for fun: apply the model to photos that I took"
+    "# Just for fun: applying the model to my food"
    ]
   },
   {
@@ -926,9 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
