--- a/Densenet.ipynb
+++ b/Densenet.ipynb
@@ -423,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "densenet = models.densenet121(pretrained=True)"
+    "model = models.densenet121(pretrained=True)"
    ]
   },
   {
@@ -432,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layers = list(densenet.children())"
+    "layers = list(model.children())"
    ]
   },
   {
@@ -480,7 +480,7 @@
     }
    ],
    "source": [
-    "densenet.classifier"
+    "model.classifier"
    ]
   },
   {
@@ -580,7 +580,7 @@
     {
      "data": {
       "text/plain": [
-       "1.7797839641571045"
+       "1.8410882949829102"
       ]
      },
      "execution_count": 47,
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,6 +988,439 @@
    ],
    "source": [
     "train_triangular_policy2(model, train_dl, valid_dl, max_lr=0.03, epochs=30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unfreeze some hidden parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train initial model (frozen hidden layers) with fixed learning rate for 10 epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.densenet121(pretrained=True)\n",
+    "\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "model.classifier = nn.Linear(1024, 6)\n",
+    "\n",
+    "model = model.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 1.159 val loss 0.708 val accuracy 0.750\n",
+      "/home/ubuntu/models/sandwich/initial_densenet_75.pth\n",
+      "train loss 0.870 val loss 0.841 val accuracy 0.710\n",
+      "train loss 0.828 val loss 0.847 val accuracy 0.744\n",
+      "train loss 0.901 val loss 1.051 val accuracy 0.701\n",
+      "train loss 0.787 val loss 0.884 val accuracy 0.731\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(model, epochs=10, learning_rate=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## From initial model, unfreeze denseblock4 and norm5. Train with lower learning rate for additional 20 epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.densenet121(pretrained=True)\n",
+    "\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "model.classifier = nn.Linear(1024, 6)\n",
+    "\n",
+    "model = model.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"initial_densenet_75.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7084484199682871, 0.75)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Source: https://github.com/masterflorin/PyTorchChallengeScholarship2018-19/blob/master/lab_challenge/Final_Lab_Challenge.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conv0\n",
+      "norm0\n",
+      "relu0\n",
+      "pool0\n",
+      "denseblock1\n",
+      "transition1\n",
+      "denseblock2\n",
+      "transition2\n",
+      "denseblock3\n",
+      "transition3\n",
+      "denseblock4\n",
+      "norm5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in model.children():\n",
+    "    for child, config in name.named_children():\n",
+    "        print(child)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unfreeze(model, param_names):\n",
+    "    for name in model.children():\n",
+    "        for child, config in name.named_children():\n",
+    "            if child in param_names:\n",
+    "                for param in config.parameters():\n",
+    "                    param.requires_grad = True\n",
+    "            else:\n",
+    "                for param in config.parameters():\n",
+    "                    param.requires_grad = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unfreeze(model, ['denseblock4', 'norm5'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train2(model, epochs=5, learning_rate=0.01):\n",
+    "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
+    "    prev_val_acc = 0.0\n",
+    "    for i in range(epochs):\n",
+    "        model.train()\n",
+    "        total = 0\n",
+    "        sum_loss = 0\n",
+    "        for x, y in train_dl:\n",
+    "            batch = y.shape[0]\n",
+    "            x = x.cuda().float()\n",
+    "            y = y.cuda()\n",
+    "            out = model(x)\n",
+    "            _, pred = torch.max(out, 1)\n",
+    "            loss = F.cross_entropy(out, y)\n",
+    "            optimzer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimzer.step()\n",
+    "            total += batch\n",
+    "            sum_loss += batch*(loss.item())\n",
+    "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
+    "        if i % 2 == 0:\n",
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc:\n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.75:\n",
+    "                path = \"{0}/unfreeze_densenet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 0.796 val loss 0.550 val accuracy 0.827\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_83.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_83.pth\n",
+      "train loss 0.225 val loss 0.593 val accuracy 0.817\n",
+      "train loss 0.176 val loss 0.532 val accuracy 0.837\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_84.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_84.pth\n",
+      "train loss 0.097 val loss 0.650 val accuracy 0.811\n",
+      "train loss 0.095 val loss 0.592 val accuracy 0.849\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_85.pth\n",
+      "train loss 0.066 val loss 0.618 val accuracy 0.832\n",
+      "train loss 0.107 val loss 0.719 val accuracy 0.821\n",
+      "train loss 0.065 val loss 0.671 val accuracy 0.839\n",
+      "train loss 0.054 val loss 0.735 val accuracy 0.828\n",
+      "train loss 0.063 val loss 0.636 val accuracy 0.844\n"
+     ]
+    }
+   ],
+   "source": [
+    "train2(model, epochs=20, learning_rate=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.densenet121(pretrained=True)\n",
+    "\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "model.classifier = nn.Linear(1024, 6)\n",
+    "\n",
+    "model = model.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"unfreeze_densenet_85.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5917895870904127, 0.8488888888888889)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# From initial model, unfreeze denseblock3, transition3, denseblock4, norm5denseblock4, and norm5. Train with lower learning rate for additional 20 epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.densenet121(pretrained=True)\n",
+    "\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "model.classifier = nn.Linear(1024, 6)\n",
+    "\n",
+    "model = model.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"initial_densenet_75.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7084484199682871, 0.75)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unfreeze(model, ['denseblock3', 'transition3', 'denseblock4', 'norm5'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 0.861 val loss 0.640 val accuracy 0.796\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_80.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_80.pth\n",
+      "train loss 0.433 val loss 0.640 val accuracy 0.791\n",
+      "train loss 0.308 val loss 0.526 val accuracy 0.824\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_82.pth\n",
+      "train loss 0.257 val loss 0.560 val accuracy 0.832\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_83.pth\n",
+      "train loss 0.180 val loss 0.614 val accuracy 0.841\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_84.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_85.pth\n",
+      "train loss 0.174 val loss 0.642 val accuracy 0.833\n",
+      "train loss 0.137 val loss 0.711 val accuracy 0.820\n",
+      "/home/ubuntu/models/sandwich/unfreeze_densenet_85.pth\n",
+      "train loss 0.129 val loss 0.611 val accuracy 0.809\n",
+      "train loss 0.087 val loss 0.710 val accuracy 0.834\n",
+      "train loss 0.096 val loss 0.654 val accuracy 0.834\n"
+     ]
+    }
+   ],
+   "source": [
+    "train2(model, epochs=20, learning_rate=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.densenet121(pretrained=True)\n",
+    "\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "model.classifier = nn.Linear(1024, 6)\n",
+    "\n",
+    "model = model.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"unfreeze_densenet_85.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6218147658639483, 0.8466666666666667)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
    ]
   },
   {
